# cpp-git-bootleg

./: .gitignore  README.md
gitus/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  GitUS.cbp  GitUS.layout  GitUsService.h  Makefile  cmake_install.cmake  commands.cpp  commands.h  gitus  gitus.cpp  gitus_service.cpp  gitus_service.h  launchSettings  tests - Shortcut.lnk  utils.h  x64-Debug (default) - Shortcut.lnk
gitus/git/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gitus/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dummytest.cpp
